<resources>
    <string name="app_name">Finance</string>
    <string name="add_expense">新增支出</string>
    <string name="input_amount">請輸入金額</string>
    <string name="comment">備註</string>
    <string name="OK">確定</string>
    <string name="cancel">取消</string>
    <string name="amount">金額</string>
    <string name="date">日期</string>
    <string name="total">本月總金額:</string>
    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="source">來源</string>
    <string name="input_account">請輸入新帳戶</string>
    <string name="add_account">新增帳戶</string>
    <string name="add">新增</string>
</resources>
