<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dodgerblue"
        android:padding="5dp"
        android:text="@string/add_expense"
        android:textColor="@color/white"
        android:textSize="28sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            >
            <EditText
                android:id="@+id/edtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_amount"
                android:inputType="number"
                android:text="1000"
                android:textSize="25sp"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            >
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imgBtnIncrease"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selector"
                app:srcCompat="@drawable/ic_add_black_24px"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imgBtnDecrease"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selector"
                app:srcCompat="@drawable/ic_remove_black_24px"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            >
            <EditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textSize="25sp"
                tools:text="yyyy:mm:dd"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/imgBtnPickDate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/bg_selector"
            app:srcCompat="@drawable/ic_today_black_24px"
            />
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:textSize="25sp"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>